--- a/form.html
+++ b/form.html
@@ -9,8 +9,11 @@
             <input type="text" id="mail" name="user_email">
         </li>
         <li>
-            <label for="msg">Message: </label>
+            <label for="msg">Message: </label><br>
             <textarea id="msg" name="user_message"></textarea>
+        </li>
+        <li class="button">
+            <button type="submit">Send your message</button>
         </li>
     </ul>
 </form>
