--- a/form.html
+++ b/form.html
@@ -1,19 +1,24 @@
-<form action="/my-handling-form-page" method="post">
-    <ul>
-        <li>
-            <label for="name">Name: </label>
-            <input type="text" id="name" name="username">
-        </li>
-        <li>
-            <label for="email">Email: </label>
-            <input type="text" id="mail" name="user_email">
-        </li>
-        <li>
-            <label for="msg">Message: </label><br>
-            <textarea id="msg" name="user_message"></textarea>
-        </li>
-        <li class="button">
-            <button type="submit">Send your message</button>
-        </li>
-    </ul>
-</form>
+<head>
+    <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+    <form action="/my-handling-form-page" method="post">
+        <ul>
+            <li>
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="username">
+            </li>
+            <li>
+                <label for="email">Email: </label>
+                <input type="text" id="mail" name="user_email">
+            </li>
+            <li>
+                <label for="msg">Message: </label>
+                <textarea id="msg" name="user_message"></textarea>
+            </li>
+            <li class="button">
+                <button type="submit">Send your message</button>
+            </li>
+        </ul>
+    </form>
+</body>
